infrastructure/minio/overlays/mochi/ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: storage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.mochi.platform.dspdemos.com`)
      kind: Rule
      services:
        - name: minio
          port: 9000
          scheme: http
  tls:
    secretName: minio-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: storage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3-console.mochi.platform.dspdemos.com`)
      kind: Rule
      services:
        - name: minio
          port: 9001
          scheme: http
  tls:
    secretName: minio-console-tls
